{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 817,
  "lineage": "7e48f9dc-251e-b8f7-45d5-88d7b7e24812",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:791073934047:loadbalancer/app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b",
            "arn_suffix": "app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b",
            "dns_name": "Nedal-PsAssignment-alb-231746308.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:791073934047:loadbalancer/app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Nedal-PsAssignment-alb",
            "security_groups": [
              "sg-0ad4051d940d0b02f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0dbcd8deaccc6f901"
              },
              {
                "subnet_id": "subnet-0dcba1118a562e7e0"
              }
            ],
            "subnets": [
              "subnet-0dbcd8deaccc6f901",
              "subnet-0dcba1118a562e7e0"
            ],
            "vpc_id": "vpc-0d29e99130698666b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:791073934047:listener/app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b/763c3f4b00469756",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:791073934047:targetgroup/Nedal-PsAssignment-tgrp/276704b91af66741",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:791073934047:listener/app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b/763c3f4b00469756",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:791073934047:loadbalancer/app/Nedal-PsAssignment-alb/f0a2bf92ec5c861b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.trgp",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "trgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:791073934047:targetgroup/Nedal-PsAssignment-tgrp/276704b91af66741",
            "arn_suffix": "targetgroup/Nedal-PsAssignment-tgrp/276704b91af66741",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:791073934047:targetgroup/Nedal-PsAssignment-tgrp/276704b91af66741",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Nedal-PsAssignment-tgrp",
            "port": 8000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-015c2e30e99525d97",
            "public_dns": "ec2-34-227-130-77.compute-1.amazonaws.com",
            "public_ip": "34.227.130.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nedal-PsAssignment-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fb74c47d978cdfc7",
            "public_dns": "ec2-50-16-164-179.compute-1.amazonaws.com",
            "public_ip": "50.16.164.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nedal-PsAssignment-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:internet-gateway/igw-0833300cc45f6804d",
            "id": "igw-0833300cc45f6804d",
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-IGW"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015c2e30e99525d97",
            "id": "nat-0ce200f487fd98e3b",
            "network_interface_id": "eni-0c34825389394bbb5",
            "private_ip": "10.0.2.239",
            "public_ip": "34.227.130.77",
            "subnet_id": "subnet-0dcba1118a562e7e0",
            "tags": {
              "Name": "Nedal-PsAssignment-NatGateway-1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb74c47d978cdfc7",
            "id": "nat-00786a1488af1df90",
            "network_interface_id": "eni-0aa1e8d3ea305b578",
            "private_ip": "10.0.3.215",
            "public_ip": "50.16.164.179",
            "subnet_id": "subnet-0dbcd8deaccc6f901",
            "tags": {
              "Name": "Nedal-PsAssignment-NatGateway-2"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0833300cc45f6804d",
            "id": "r-rtb-06f3b9dc99574c1da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f3b9dc99574c1da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-095901bf6c94767c1",
            "owner_id": "791073934047",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ce200f487fd98e3b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nedal-PsAssignment-PrivateRouteTable-1"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f5605838820c4025",
            "owner_id": "791073934047",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00786a1488af1df90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nedal-PsAssignment-PrivateRouteTable-2"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06daf434048478a81",
            "route_table_id": "rtb-095901bf6c94767c1",
            "subnet_id": "subnet-08d3e30ead88157fb"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d912b1bceb8115b2",
            "route_table_id": "rtb-0f5605838820c4025",
            "subnet_id": "subnet-0a5c93315dad62841"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:security-group/sg-0ad4051d940d0b02f",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad4051d940d0b02f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Nedal-PsAssignment-alb-sg",
            "name_prefix": null,
            "owner_id": "791073934047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nedal-PsAssignment-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:security-group/sg-078b5d246ab2d8770",
            "description": "Allow inbound access to ECS tasks from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078b5d246ab2d8770",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad4051d940d0b02f"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "Nedal-PsAssignment-task-sg",
            "name_prefix": null,
            "owner_id": "791073934047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nedal-PsAssignment-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:subnet/subnet-08d3e30ead88157fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08d3e30ead88157fb",
            "map_public_ip_on_launch": false,
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:subnet/subnet-0a5c93315dad62841",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a5c93315dad62841",
            "map_public_ip_on_launch": false,
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:subnet/subnet-0dcba1118a562e7e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dcba1118a562e7e0",
            "map_public_ip_on_launch": true,
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-PublicSubnet-1"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:subnet/subnet-0dbcd8deaccc6f901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dbcd8deaccc6f901",
            "map_public_ip_on_launch": true,
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-PublicSubnet-2"
            },
            "vpc_id": "vpc-0d29e99130698666b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791073934047:vpc/vpc-0d29e99130698666b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00be46ac3b86bd735",
            "default_route_table_id": "rtb-06f3b9dc99574c1da",
            "default_security_group_id": "sg-0a71e997ec0c36012",
            "dhcp_options_id": "dopt-0d7858ed55620748c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d29e99130698666b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f3b9dc99574c1da",
            "owner_id": "791073934047",
            "tags": {
              "Name": "Nedal-PsAssignment-VPC"
            }
          }
        }
      ]
    }
  ]
}